Minor update to hello-world

--- a/hello-world.html
+++ b/hello-world.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Hello World</h1>
     <p>This file was written in the GitPod IDE</p>
+    <ul>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ul>
 </body>
 </html>
